Closed Bug 1497796 Opened 7 years ago Closed 7 years ago

[BinAST] `this` value is not set properly for method invocation inside with

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- disabled

People

(Reporter: arai, Assigned: efaust)

References

Details

Attachments

(2 files)

Attached file with-this.binjs
encoded from https://searchfox.org/mozilla-central/source/js/src/jit-test/tests/basic/bug786114.js tested on m-c 6f8701d1be0c + patches for other bug fixes under bug 1495611 Configure flags: --enable-warnings-as-errors --disable-optimize --enable-debug Runtime flag: -B with-this.binjs Actual result: Assertion failed: got "[object global]o!o!", expected "o!o!o!" `this` is global object in x() function at 1st call.
Assignee: nobody → efaustbmo
Status: NEW → ASSIGNED
Attachment #9016114 - Flags: review?(arai.unmht)
Attachment #9016114 - Flags: review?(arai.unmht) → review+
Depends on: 1497446
Pushed by efaustbmo@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/582fd4a0f638 Mark with block contents in BinAST as being "in a with". (r=arai)
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: