Bug 1497796 - Mark with block contents in BinAST as being "in a with". (r=arai)